--- a/html/resultats.html
+++ b/html/resultats.html
@@ -36,10 +36,62 @@
             </a>
         </nav>
     </header>
+    
     <main>
         <section class="section-activite">
-            <h2 class="titre-activite">ACTIVITÉS DU JUDO-CLUB</h2>
-
+            <h2 class="titre-activite">RÉSULTATS DU JUDO-CLUB</h2>
+            <div class="actu-resultat">
+                <article class="article-resultat">
+                    <a href="" class="lien-resultat">
+                        <div class="bloc-titre">
+                            <h3>Tournoi des petits-tigres</h3>
+                        </div>
+                        <div class="bloc-contenu">
+                            <img src="../assets/img/resultat/tournoi6.jpg" alt="photo de petits judoka au tournoi petits tigres" class="img-tournoi">
+                        </div>
+                    </a>
+                </article>
+                <article class="article-resultat">
+                    <a href="" class="lien-resultat">
+                        <div class="bloc-titre">
+                            <h3>Coupe de Moselle Benjamins/Benjamines</h3>
+                        </div>
+                        <div class="bloc-contenu">
+                            <img src="../assets/img/resultat/tournoi5.jpg" alt="photo de jeunes judokas" class="img-tournoi">
+                        </div>
+                    </a>
+                </article>
+                <article class="article-resultat">
+                    <a href="" class="lien-resultat">
+                        <div class="bloc-titre">
+                            <h3>Championnat Grand-Est Minimes</h3>
+                        </div>
+                        <div class="bloc-contenu">
+                            <img src="../assets/img/resultat/tournoi4.jpg" alt="photo de judokas" class="img-tournoi">
+                        </div>
+                    </a>
+                </article>
+                <article class="article-resultat">
+                    <a href="" class="lien-resultat">
+                        <div class="bloc-titre">
+                            <h3>Championnat de Inter-Région Juniors</h3>
+                        </div>
+                        <div class="bloc-contenu">
+                            <img src="../assets/img/resultat/tournoi3.jpg" alt="photo de judokates" class="img-tournoi">
+                        </div>
+                    </a>
+                </article>
+                <article class="article-resultat">
+                    <a href="" class="lien-resultat">
+                        <div class="bloc-titre">
+                            <h3>Coupe de France par équipe</h3>
+                        </div>
+                        <div class="bloc-contenu">
+                            <img src="../assets/img/resultat/tournoi2.jpg" alt="photo de judokas" class="img-tournoi">
+                        </div>
+                    </a>
+                </article>
+            </div>
         </section>
     </main>
     <script src="../js/resultats.js"></script>
