ajout footer + page grade & encyclo + revision mise en page

--- a/html/grades.html
+++ b/html/grades.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/gallerie.css"/>
+    <link rel="stylesheet" href="../styles/encyclopedie.css"/>
     <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <title>Gallerie du Judo-Club</title>
+    <title>Les grades du Judo</title>
 </head>
 
 <body>
@@ -29,20 +29,14 @@
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="../html/resultats.html" class="naviguation">Résultats</a>
             <a href="../html/reglements.html" class="naviguation">Réglements</a>
-            <a href="../html/grades.html" class="naviguation">Grades</a>
-            <a href="" class="naviguation page-active">Gallerie</a>
+            <a href="" class="naviguation page-active">Grades</a>
+            <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
             <a href="../html/encyclopedie.html" class="naviguation">Encyclopédie</a>
         </nav>
     </header>
     <main>
         <section class="section-media">
-            <h2 class="titre-media">LA GALLERIE DES MÉDIAS</h2>
-            <div id="liste" class="liste">
-                <a href="../html/20-21/medias.html" class="link-media-saison"><i class="fas fa-photo-video icone-saison"></i><p class="link-folder">Saison 2020/2021</p></a>
-                <a href="../html/20-21/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2019/2020</p></a>
-                <a href="../html/20-21/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2018/2019</p></a>
-                <a href="../html/20-21/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2017/2018</p></a>
-            </div>
+            <h2 class="titre-media">LES GRADES</h2>
         </section>
     </main>
     <footer>
@@ -68,6 +62,6 @@
             </ul>
         </div>
     </footer>
-    <script src="../js/gallerie.js"></script>
+    <script src="../js/grades.js"></script>
 </body>
 </html>
