--- a/html/reglements.html
+++ b/html/reglements.html
@@ -29,17 +29,19 @@
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="../html/resultats.html" class="naviguation">Résultats</a>
             <a href="" class="naviguation page-active">Réglements</a>
+            <a href="../html/grades.html" class="naviguation">Grades</a>
             <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
-            <a href="../html/contact.html" class="naviguation">Contact</a>
-            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
-            </a>
+            <a href="../html/encyclopedie.html" class="naviguation">Encyclopédie</a>
         </nav>
     </header>
     <main>
         <section class="section-reglement">
             <h2 class="titre-media">LES RÉGLEMENTS</h2>
             <div id="liste" class="liste">
+                <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
+                    <span class="telecharger">Télécharger le Réglement Intérieur</span> 
+                    <img src="../assets/documents/reglements/logo-découpé.png">
+                </a>
                 <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
                     <span class="telecharger">Télécharger le Code Sportif</span> 
                     <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
@@ -67,6 +69,29 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="liens-off">
+            <a id="social" href="https://www.ffjudo.com/" class="social">
+                <img id="social-link" class="facebook" src="../assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+            </a>
+            <a id="social" href="https://www.judograndest.fr/" class="social">
+                <img id="social-link" class="facebook" src="../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue Grand-Est de Judo">
+            </a>
+            <a id="social" href="https://www.judo-moselle.fr/" class="social">
+                <img id="social-link" class="moselle" src="../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle Judo">
+            </a>
+            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club de Fénétrange">
+            </a>
+        </div>
+        <div class="liens-contact">
+            <ul class="liste-contact">
+                <li class="contact">
+                    <a href="../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="../js/reglements.js"></script>
 </body>
 </html>
