--- a/html/20-21/medias.html
+++ b/html/20-21/medias.html
@@ -24,16 +24,14 @@
         </div>
         <nav>
             <a href="../../index.html" class="naviguation">Activités</a>
-            <a href="../../html/membres.html" class="naviguation">Membres</a>
-            <a href="../../html/agenda.html" class="naviguation">Agenda</a>
-            <a href="../../html/actualites.html" class="naviguation">Actualités</a>
-            <a href="../../html/resultats.html" class="naviguation">Résultats</a>
-            <a href="../../html/reglements.html" class="naviguation">Réglements</a>
+            <a href="../membres.html" class="naviguation">Membres</a>
+            <a href="../agenda.html" class="naviguation">Agenda</a>
+            <a href="../gallerie.html" class="naviguation">Actualités</a>
+            <a href="../resultats.html" class="naviguation">Résultats</a>
+            <a href="../reglements.html" class="naviguation">Réglements</a>
+            <a href="../grades.html" class="naviguation">Grades</a>
             <a href="../gallerie.html" class="naviguation page-active">Gallerie</a>
-            <a href="../../html/contact.html" class="naviguation">Contact</a>
-            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="../../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
-            </a>
+            <a href="../encyclopedie.html" class="naviguation">Encyclopédie</a>
         </nav>
     </header>
     <main>
@@ -193,6 +191,29 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="liens-off">
+            <a id="social" href="https://www.ffjudo.com/" class="social">
+                <img id="social-link" class="facebook" src="../../assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+            </a>
+            <a id="social" href="https://www.judograndest.fr/" class="social">
+                <img id="social-link" class="facebook" src="../../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue Grand-Est de Judo">
+            </a>
+            <a id="social" href="https://www.judo-moselle.fr/" class="social">
+                <img id="social-link" class="moselle" src="../../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle Judo">
+            </a>
+            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="social-link" class="facebook" src="../../assets/img/accueil/facebook.png" alt="Facebook du judo-club de Fénétrange">
+            </a>
+        </div>
+        <div class="liens-contact">
+            <ul class="liste-contact">
+                <li class="contact">
+                    <a href="../contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="../../js/medias.js"></script>
 </body>
 </html>
