--- a/html/contact.html
+++ b/html/contact.html
@@ -29,19 +29,17 @@
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="../html/resultats.html" class="naviguation">Résultats</a>
             <a href="../html/reglements.html" class="naviguation">Réglements</a>
+            <a href="../html/grades.html" class="naviguation">Grades</a>
             <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
-            <a href="" class="naviguation page-active">Contact</a>
-            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
-            </a>
+            <a href="../html/encyclopedie.html" class="naviguation">Encyclopédie</a>
         </nav>
     </header>
     <main>
         <section class="section-reglement">
             <h2 class="titre-media">CONTACTER LE JUDO-CLUB</h2>
-                <div class="content">
-                    <div class="modal-body">
-                        <p class="contact-me">FORMULAIRE DE CONTACT</p>
+            <div class="content">
+                <div class="modal-body">
+                    <p class="contact-me">FORMULAIRE DE CONTACT</p>
                     <form name="contact" id="formulaire" action="photographe.html" method="post">
                         <div class="formData">
                             <label for="first">Prénom</label><br>
@@ -68,9 +66,32 @@
                             <span id="error-validation"></span>
                         </div>
                     </form>
-                    </div>
                 </div>
+            </div>
     </main>
+    <footer>
+        <div class="liens-off">
+            <a id="social" href="https://www.ffjudo.com/" class="social">
+                <img id="social-link" class="facebook" src="../assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+            </a>
+            <a id="social" href="https://www.judograndest.fr/" class="social">
+                <img id="social-link" class="facebook" src="../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue Grand-Est de Judo">
+            </a>
+            <a id="social" href="https://www.judo-moselle.fr/" class="social">
+                <img id="social-link" class="moselle" src="../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle Judo">
+            </a>
+            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club de Fénétrange">
+            </a>
+        </div>
+        <div class="liens-contact">
+            <ul class="liste-contact">
+                <li class="contact">
+                    <a href="../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="../js/contact.js"></script>
 </body>
 </html>
