--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
             <a href="html/actualites.html" class="naviguation">Actualités</a>
             <a href="html/resultats.html" class="naviguation">Résultats</a>
             <a href="html/reglements.html" class="naviguation">Réglements</a>
+            <a href="html/grades.html" class="naviguation">Grades</a>
             <a href="html/gallerie.html" class="naviguation">Gallerie</a>
-            <a href="html/contact.html" class="naviguation">Contact</a>
-            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/facebook.png" alt="Facebook du judo-club">
-            </a>
+            <a href="html/encyclopedie.html" class="naviguation">Encyclopédie</a>
         </nav>
     </header>
     <main>
@@ -99,6 +97,29 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="liens-off">
+            <a id="social" href="https://www.ffjudo.com/" class="social">
+                <img id="social-link" class="facebook" src="assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+            </a>
+            <a id="social" href="https://www.judograndest.fr/" class="social">
+                <img id="social-link" class="facebook" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Facebook du judo-club">
+            </a>
+            <a id="social" href="https://www.judo-moselle.fr/" class="social">
+                <img id="social-link" class="moselle" src="assets/img/accueil/moselle-logo.png" alt="Facebook du judo-club">
+            </a>
+            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="social-link" class="facebook" src="assets/img/accueil/facebook.png" alt="Facebook du judo-club">
+            </a>
+        </div>
+        <div class="liens-contact">
+            <ul class="liste-contact">
+                <li class="contact">
+                    <a href="html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
