ajout footer + page grade & encyclo + revision mise en page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono" class="img-activite">
                     </a>
                     <div class="info-activite">
-                        <h3>Activité pour les tout-petits</h3>
+                        <h3>Activité pour les touts-petits</h3>
                         <p class="description-activite">
                             Le  « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
                         </p>
@@ -71,7 +71,7 @@
                         <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange" class="img-activite">
                     </a>
                     <div class="info-activite">
-                        <h3>Activité pour ado et adultes</h3>
+                        <h3>Activité pour ados et adultes</h3>
                         <p class="description-activite">
                             Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination.
                         </p>
