design général + activites ok

--- a/html/gallerie.html
+++ b/html/gallerie.html
@@ -65,6 +65,9 @@
                 <li class="contact">
                     <a href="../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
                 </li>
+                <li class="contact">
+                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
+                </li>
             </ul>
         </div>
     </footer>
