--- a/html/20-21/medias.html
+++ b/html/20-21/medias.html
@@ -211,6 +211,9 @@
                 <li class="contact">
                     <a href="../contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
                 </li>
+                <li class="contact">
+                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
+                </li>
             </ul>
         </div>
     </footer>
