--- a/html/grades.html
+++ b/html/grades.html
@@ -59,6 +59,9 @@
                 <li class="contact">
                     <a href="../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
                 </li>
+                <li class="contact">
+                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
+                </li>
             </ul>
         </div>
     </footer>
