--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono" class="img-activite">
                     </a>
                     <div class="info-activite">
-                        <h3>Activité pour les touts-petits</h3>
+                        <h3 class="titre-article">Activité pour les touts-petits</h3>
                         <p class="description-activite">
                             Le  « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
                         </p>
@@ -57,7 +57,7 @@
                         <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono" class="img-activite">
                     </a>
                     <div class="info-activite">
-                        <h3>Activité pour les 9/14 ans</h3>
+                        <h3 class="titre-article">Activité pour les 9/14 ans</h3>
                         <p class="description-activite">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
                         </p>
@@ -71,11 +71,11 @@
                         <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange" class="img-activite">
                     </a>
                     <div class="info-activite">
-                        <h3>Activité pour ados et adultes</h3>
+                        <h3 class="titre-article">Activité pour ados et adultes</h3>
                         <p class="description-activite">
                             Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination.
                         </p>
-                        <p class="heure-activite">Les mardis et vendredi de 19h30 à 21h00</p>
+                        <p class="heure-activite">Les mardis et vendredis de 19h30 à 21h00</p>
                         <span class="prix"><strong>120€/an</strong> (licence 30€ + cotisations annuelle 90€)</span><br>
                         <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
                     </div>
@@ -85,7 +85,7 @@
                         <img src="assets/img/media/senior.jpg" alt="les seniors" class="img-activite">
                     </a>
                     <div class="info-activite">
-                        <h3>Activité Atelier Senior</h3>
+                        <h3 class="titre-article">Activité Atelier Senior</h3>
                         <p class="description-activite">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
                         </p>
@@ -116,6 +116,9 @@
             <ul class="liste-contact">
                 <li class="contact">
                     <a href="html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                </li>
+                <li class="contact">
+                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
                 </li>
             </ul>
         </div>
