design général + activites ok

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                             Le  « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
                         </p>
                         <p class="heure-activite">Les mercredis de 17h15 à 18h</p>
-                        <span class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</span><br>
-                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                        <p class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</p>
+                        <p class="detail-prix"><i>Possibilité de payé par trimestre</i></p>
                     </div>
                 </article>
                 <article class="ados article">
@@ -62,8 +62,8 @@
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
                         </p>
                         <p class="heure-activite">Les mercredis de 18h15 à 19h15</p>
-                        <span class="prix"><strong>105€/an</strong> (licence 30€ + cotisations annuelle 75€)</span><br>
-                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                        <p class="prix"><strong>105€/an</strong> (licence 30€ + cotisations annuelle 75€)</p>
+                        <p class="detail-prix"><i>Possibilité de payé par trimestre</i></p>
                     </div>
                 </article>
                 <article class="adultes article">
@@ -76,8 +76,8 @@
                             Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination.
                         </p>
                         <p class="heure-activite">Les mardis et vendredis de 19h30 à 21h00</p>
-                        <span class="prix"><strong>120€/an</strong> (licence 30€ + cotisations annuelle 90€)</span><br>
-                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                        <p class="prix"><strong>120€/an</strong> (licence 30€ + cotisations annuelle 90€)</p>
+                        <p class="detail-prix"><i>Possibilité de payé par trimestre</i></p>
                     </div>
                 </article>
                 <article class="senior article">
@@ -90,8 +90,8 @@
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
                         </p>
                         <p class="heure-activite">Les lundis de 17h00 à 18h00</p>
-                        <span class="prix"><strong>135€/an</strong> (licence 30€ + cotisations annuelle 105€)</span><br>
-                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                        <p class="prix"><strong>135€/an</strong> (licence 30€ + cotisations annuelle 105€)</p>
+                        <p class="detail-prix"><i>Possibilité de payé par trimestre</i></p>
                     </div>
                 </article>
             </div>
