page resultats-cadre stylisés

--- a/html/20-21/medias.html
+++ b/html/20-21/medias.html
@@ -28,7 +28,7 @@
             <a href="../agenda.html" class="naviguation">Agenda</a>
             <a href="../gallerie.html" class="naviguation">Actualités</a>
             <a href="../resultats.html" class="naviguation">Résultats</a>
-            <a href="../reglements.html" class="naviguation">Réglements</a>
+            <a href="../reglements.html" class="naviguation">Règlements</a>
             <a href="../grades.html" class="naviguation">Grades</a>
             <a href="../gallerie.html" class="naviguation page-active">Gallerie</a>
             <a href="../encyclopedie.html" class="naviguation">Encyclopédie</a>
