--- a/html/contact.html
+++ b/html/contact.html
@@ -28,7 +28,7 @@
             <a href="../html/agenda.html" class="naviguation">Agenda</a>
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="../html/resultats.html" class="naviguation">Résultats</a>
-            <a href="../html/reglements.html" class="naviguation">Réglements</a>
+            <a href="../html/reglements.html" class="naviguation">Règlements</a>
             <a href="../html/grades.html" class="naviguation">Grades</a>
             <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
             <a href="../html/encyclopedie.html" class="naviguation">Encyclopédie</a>
