--- a/html/reglements.html
+++ b/html/reglements.html
@@ -28,7 +28,7 @@
             <a href="../html/agenda.html" class="naviguation">Agenda</a>
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="../html/resultats.html" class="naviguation">Résultats</a>
-            <a href="" class="naviguation page-active">Réglements</a>
+            <a href="" class="naviguation page-active">Règlements</a>
             <a href="../html/grades.html" class="naviguation">Grades</a>
             <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
             <a href="../html/encyclopedie.html" class="naviguation">Encyclopédie</a>
@@ -36,10 +36,10 @@
     </header>
     <main>
         <section class="section-reglement">
-            <h2 class="titre-media">LES RÉGLEMENTS</h2>
+            <h2 class="titre-media">LES RÈGLEMENTS</h2>
             <div id="liste" class="liste">
                 <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
-                    <span class="telecharger">Télécharger le Réglement Intérieur</span> 
+                    <span class="telecharger">Télécharger le Règlement Intérieur</span> 
                     <img src="../assets/documents/reglements/logo-découpé.png">
                 </a>
                 <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
@@ -59,11 +59,11 @@
                     <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
                 </a>
                 <a class="reglement" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">
-                    <span class="telecharger">Télécharger le réglement d'arbitrage International</span> 
+                    <span class="telecharger">Télécharger le règlement d'arbitrage International</span> 
                     <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
                 </a>
                 <a class="reglement" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">
-                    <span class="telecharger">Télécharger le réglement d'arbitrage National</span> 
+                    <span class="telecharger">Télécharger le règlement d'arbitrage National</span> 
                     <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
                 </a>
             </div>
