--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
-    <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
+    <meta name="keywords"
+        content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
     <title>Judo-Club Fénétrange</title>
 </head>
 
@@ -18,117 +21,74 @@
 
     <header>
         <div class="cadre-titre">
-            <img src="assets/img/accueil/Judo-caligraphie-red.svg" alt="logo du judo-club de Fénétrange" class="logo-jcf">
-            <h1 class="titre">JUDO CLUB<br> FENETRANGE</h1>
+            <img src="assets/img/accueil/Judo-caligraphie-red.svg" alt="logo du judo-club de Fénétrange"
+                class="logo-jcf">
+            <h1 class="titre">JUDO CLUB<br>FENETRANGE</h1>
             <img src="assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
         <nav>
-            <a href="" class="naviguation page-active">Activités</a>
-            <a href="html/membres.html" class="naviguation">Membres</a>
-            <a href="html/agenda.html" class="naviguation">Agenda</a>
-            <a href="html/actualites.html" class="naviguation">Actualités</a>
-            <a href="html/resultats.html" class="naviguation">
-                Résultats
-                <ul class="liste-nav">
-                    <li class="lr0">
-                        <a href="" class="lien-rapide">Tournoi des petits-tigres</a>
-                    </li>
-                    <li class="lr1">
-                        <a href="" class="lien-rapide">Coupe de Moselle Benjamins(ines)</a>
-                    </li>
-                    <li class="lr2">
-                        <a href="" class="lien-rapide">Championnat Grand-Est Minimes</a>
-                    </li>
-                    <li class="lr3">
-                        <a href="" class="lien-rapide">Championnat Inter-Région Juniors</a>
-                    </li>
-                    <li class="lr4">
-                        <a href="" class="lien-rapide">Coupe de France par équipe</a>
-                    </li>
-                </ul>
-            </a>
-            <a href="html/reglements.html" class="naviguation">Règlements</a>
-            <a href="html/grades.html" class="naviguation">
-                Grades
-                <ul class="liste-nav">
-                    <li class="lr0">
-                        <a href="" class="lien-rapide">Blanche 1er degrès</a>
-                    </li>
-                    <li class="lr1">
-                        <a href="" class="lien-rapide">Blanche-Jaune</a>
-                    </li>
-                    <li class="lr2">
-                        <a href="" class="lien-rapide">Jaune</a>
-                    </li>
-                    <li class="lr3">
-                        <a href="" class="lien-rapide">Jaune-Orange</a>
-                    </li>
-                    <li class="lr4">
-                        <a href="" class="lien-rapide">Orange</a>
-                    </li>
-                    <li class="lr5">
-                        <a href="" class="lien-rapide">Orange-Verte</a>
-                    </li>
-                    <li class="lr6">
-                        <a href="" class="lien-rapide">Verte</a>
-                    </li>
-                    <li class="lr7">
-                        <a href="" class="lien-rapide">Verte-Bleue</a>
-                    </li>
-                    <li class="lr8">
-                        <a href="" class="lien-rapide">Bleue</a>
-                    </li>
-                    <li class="lr9">
-                        <a href="" class="lien-rapide">Marron</a>
-                    </li>
-                    <li class="lr10">
-                        <a href="" class="lien-rapide">Kata 1er Dan</a>
-                    </li>
-                    <li class="lr11">
-                        <a href="" class="lien-rapide">Kata 2ème Dan</a>
-                    </li>
-                    <li class="lr12">
-                        <a href="" class="lien-rapide">Kata 3ème Dan</a>
-                    </li>
-                    <li class="lr13">
-                        <a href="" class="lien-rapide">Expression Technique 1er Dan</a>
-                    </li>
-                </ul>
-            </a>
-            <a href="html/gallerie.html" class="naviguation">
-                Gallerie
-                <ul class="liste-nav">
-                    <li class="lr0">
-                        <a href="html/21-22/medias.html" class="lien-rapide">Saison 2021/2022</a>
-                    </li>
-                    <li class="lr1">
-                        <a href="html/21-22/medias.html" class="lien-rapide">Saison 2020/2021</a>
-                    </li>
-                    <li class="lr2">
-                        <a href="html/21-22/medias.html" class="lien-rapide">Saison 2019/2020</a>
-                    </li>
-                    <li class="lr3">
-                        <a href="html/21-22/medias.html" class="lien-rapide">Saison 2018/2019</a>
-                    </li>
-                    <li class="lr4">
-                        <a href="html/21-22/medias.html" class="lien-rapide">Saison 2017/2018</a>
-                    </li>
-                </ul>
-            </a>
-            <a href="html/encyclopedie.html" class="naviguation">
-                Encyclopédie
-                <ul class="liste-nav">
-                    <li class="lr0">
-                        <a href="" class="lien-rapide">Histoire du Judo</a>
-                    </li>
-                    <li class="lr1">
-                        <a href="" class="lien-rapide">Histoire du Club</a>
-                    </li>
-                    <li class="lr2">
-                        <a href="" class="lien-rapide">Poids & Catégories</a>
-                    </li>
-                </ul>
-            </a>
+            <div class="naviguation page-active">
+                <a href="" class="lien-actif">Activités</a>
+            </div>
+            <div class="naviguation">
+                <a href="html/membres.html" class="lien-nav">Membres</a>
+            </div>
+            <div class="naviguation">
+                <a href="html/agenda.html" class="lien-nav">Agenda</a>
+            </div>
+            <div class="naviguation">
+                <a href="html/actualites.html" class="lien-nav">Actualités</a>
+            </div>
+            <div class="naviguation">
+                <a href="html/resultats.html" class="lien-nav">Résultats</a>
+                <div class="nav-rapide">
+                    <a href="" class="lien-rapide">Tournoi des petits-tigres</a>
+                    <a href="" class="lien-rapide">Coupe de Moselle Benjamins(ines)</a>
+                    <a href="" class="lien-rapide">Championnat Grand-Est Minimes</a>
+                    <a href="" class="lien-rapide">Championnat Inter-Région Juniors</a>
+                    <a href="" class="lien-rapide">Coupe de France par équipe</a>
+                </div>
+            </div>
+            <div class="naviguation">
+                <a href="html/reglements.html" class="lien-nav">Règlements</a>
+            </div>
+            <div class="naviguation">
+                <a href="html/grades.html" class="lien-nav">Grades</a>
+                <div class="nav-rapide">
+                    <a href="" class="lien-rapide">Blanche 1er degrès</a>
+                    <a href="" class="lien-rapide">Blanche-Jaune</a>
+                    <a href="" class="lien-rapide">Jaune</a>
+                    <a href="" class="lien-rapide">Jaune-Orange</a>
+                    <a href="" class="lien-rapide">Orange</a>
+                    <a href="" class="lien-rapide">Orange-Verte</a>
+                    <a href="" class="lien-rapide">Verte</a>
+                    <a href="" class="lien-rapide">Verte-Bleue</a>
+                    <a href="" class="lien-rapide">Bleue</a>
+                    <a href="" class="lien-rapide">Marron</a>
+                    <a href="" class="lien-rapide">Kata 1er Dan</a>
+                    <a href="" class="lien-rapide">Kata 2ème Dan</a>
+                    <a href="" class="lien-rapide">Kata 3ème Dan</a>
+                    <a href="" class="lien-rapide">Expression Technique 1er Dan</a>
+                </div>
+            </div>
+            <div class="naviguation">
+                <a href="html/gallerie.html" class="lien-nav">Gallerie</a>
+                <div class="nav-rapide">
+                    <a href="html/21-22/medias.html" class="lien-rapide">Saison 2021/2022</a>
+                    <a href="html/21-22/medias.html" class="lien-rapide">Saison 2020/2021</a>
+                    <a href="html/21-22/medias.html" class="lien-rapide">Saison 2019/2020</a>
+                    <a href="html/21-22/medias.html" class="lien-rapide">Saison 2018/2019</a>
+                    <a href="html/21-22/medias.html" class="lien-rapide">Saison 2017/2018</a>
+                </div>
+            </div>
+            <div class="naviguation">
+                <a href="html/encyclopedie.html" class="lien-nav">Encyclopédie</a>
+                <div class="nav-rapide">
+                    <a href="" class="lien-rapide">Histoire du Judo</a>
+                    <a href="" class="lien-rapide">Histoire du Club</a>
+                    <a href="" class="lien-rapide">Poids & Catégories</a>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
@@ -138,12 +98,16 @@
                 <div class="activites">
                     <article class="enfants article">
                         <a href="html/membres.html" class="lien-equipe">
-                            <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono" class="img-activite">
+                            <img src="assets/img/media/petits-judokas.jpg" alt="des enfants en kimono"
+                                class="img-activite">
                         </a>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités pour les touts-petits</h3>
                             <p class="description-activite">
-                                Le  « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
+                                Le « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où
+                                les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de
+                                judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le
+                                contact avec les autres enfants du groupe.
                             </p>
                             <p class="heure-activite">Les mercredis de 17h15 à 18h</p>
                             <p class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</p>
@@ -152,12 +116,15 @@
                     </article>
                     <article class="ados article">
                         <a href="html/membres.html" class="lien-equipe">
-                            <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono" class="img-activite">
+                            <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono"
+                                class="img-activite">
                         </a>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités pour les 9/14 ans</h3>
                             <p class="description-activite">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt
+                                expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae
+                                illo recusandae vero cumque? Nobis.
                             </p>
                             <p class="heure-activite">Les mercredis de 18h15 à 19h15</p>
                             <p class="prix"><strong>105€/an</strong> (licence 30€ + cotisations annuelle 75€)</p>
@@ -166,12 +133,15 @@
                     </article>
                     <article class="adultes article">
                         <a href="html/membres.html" class="lien-equipe">
-                            <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange" class="img-activite">
+                            <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange"
+                                class="img-activite">
                         </a>
                         <div class="info-activite">
                             <h3 class="titre-article">Activités pour ados et adultes</h3>
                             <p class="description-activite">
-                                Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination.
+                                Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui
+                                développe les activités motrices fondamentales. Le judo enrichit les qualités comme la
+                                souplesse, la vitesse, l’anticipation, la puissance et la coordination.
                             </p>
                             <p class="heure-activite">Les mardis et vendredis de 19h30 à 21h00</p>
                             <p class="prix"><strong>120€/an</strong> (licence 30€ + cotisations annuelle 90€)</p>
@@ -185,7 +155,9 @@
                         <div class="info-activite">
                             <h3 class="titre-article">Activités Atelier Senior</h3>
                             <p class="description-activite">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt
+                                expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae
+                                illo recusandae vero cumque? Nobis.
                             </p>
                             <p class="heure-activite">Les lundis de 17h00 à 18h00</p>
                             <p class="prix"><strong>135€/an</strong> (licence 30€ + cotisations annuelle 105€)</p>
@@ -199,22 +171,27 @@
     <footer>
         <div class="liens-off">
             <a id="social" href="https://www.ffjudo.com/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+                <img id="social-link" class="facebook" src="assets/img/accueil/Logo_France_Judo.png"
+                    alt="Fédération ffjudo">
             </a>
             <a id="social" href="https://www.judograndest.fr/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Facebook du judo-club">
+                <img id="social-link" class="facebook" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png"
+                    alt="Facebook du judo-club">
             </a>
             <a id="social" href="https://www.judo-moselle.fr/" class="social">
-                <img id="social-link" class="moselle" src="assets/img/accueil/moselle-logo.png" alt="Facebook du judo-club">
+                <img id="social-link" class="moselle" src="assets/img/accueil/moselle-logo.png"
+                    alt="Facebook du judo-club">
             </a>
             <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/facebook.png" alt="Facebook du judo-club">
+                <img id="social-link" class="facebook" src="assets/img/accueil/facebook.png"
+                    alt="Facebook du judo-club">
             </a>
         </div>
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                    <a href="html/contact.html" class="contact-form"><i
+                            class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
                 </li>
                 <li class="contact">
                     <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
@@ -224,4 +201,5 @@
     </footer>
     <script src="js/app.js"></script>
 </body>
+
 </html>
