revision nouvelle version header + ajout lien rapide nav

--- a/index.html
+++ b/index.html
@@ -170,21 +170,17 @@
     </main>
     <footer>
         <div class="liens-off">
-            <a id="social" href="https://www.ffjudo.com/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/Logo_France_Judo.png"
-                    alt="Fédération ffjudo">
+            <a id="lien-france-judo" href="https://www.ffjudo.com/" class="social">
+                <img id="logo-france-judo" class="logo-lien-footer" src="assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
             </a>
-            <a id="social" href="https://www.judograndest.fr/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png"
-                    alt="Facebook du judo-club">
+            <a id="lien-grand-est" href="https://www.judograndest.fr/" class="social">
+                <img id="logo-grand-est" class="logo-lien-footer" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Facebook du judo-club">
             </a>
-            <a id="social" href="https://www.judo-moselle.fr/" class="social">
-                <img id="social-link" class="moselle" src="assets/img/accueil/moselle-logo.png"
-                    alt="Facebook du judo-club">
+            <a id="lien-moselle" href="https://www.judo-moselle.fr/" class="social">
+                <img id="logo-moselle" class="moselle" src="assets/img/accueil/moselle-logo.png" alt="Facebook du judo-club">
             </a>
-            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="assets/img/accueil/facebook.png"
-                    alt="Facebook du judo-club">
+            <a id="lien-facebook" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="logo-facebook" class="logo-lien-footer" src="assets/img/accueil/facebook.png" alt="Facebook du judo-club">
             </a>
         </div>
         <div class="liens-contact">
