revision nouvelle version header + ajout lien rapide nav

--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
     <footer>
         <div class="liens-off">
             <a id="lien-france-judo" href="https://www.ffjudo.com/" class="social">
-                <img id="logo-france-judo" class="logo-lien-footer" src="assets/img/accueil/Logo_France_Judo.png" alt="Fédération ffjudo">
+                <img id="logo-france-judo" class="logo-lien-footer" src="assets/img/accueil/Logo_France_Judo.png" alt="Fédération france judo">
             </a>
             <a id="lien-grand-est" href="https://www.judograndest.fr/" class="social">
-                <img id="logo-grand-est" class="logo-lien-footer" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Facebook du judo-club">
+                <img id="logo-grand-est" class="logo-lien-footer" src="assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Fédération judo Grand-Est">
             </a>
             <a id="lien-moselle" href="https://www.judo-moselle.fr/" class="social">
-                <img id="logo-moselle" class="moselle" src="assets/img/accueil/moselle-logo.png" alt="Facebook du judo-club">
+                <img id="logo-moselle" class="moselle" src="assets/img/accueil/moselle-logo.png" alt="Comité de Moselle de judo">
             </a>
             <a id="lien-facebook" href="https://www.facebook.com/judoclubf/" class="social">
                 <img id="logo-facebook" class="logo-lien-footer" src="assets/img/accueil/facebook.png" alt="Facebook du judo-club">
